// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderContainer should render correctly with empty movieData 1`] = `
<div
  className="header-container"
>
  <div
    className="buttons-container"
  >
    <a
      className="home-page-btn"
      href="."
    >
      <b>
        netflix
      </b>
      roulette
    </a>
  </div>
  <Connect(SearchContainer) />
</div>
`;

exports[`HeaderContainer should render correctly with movieData 1`] = `
<div
  className="header-container"
>
  <div
    className="buttons-container"
  >
    <a
      className="home-page-btn"
      href="."
    >
      <b>
        netflix
      </b>
      roulette
    </a>
    <a
      className="home-page-btn"
      href="."
    >
      Search icon
    </a>
  </div>
  <Connect(MovieCard) />
</div>
`;
